force-app/main/default/objects/Quote_Order__c/Quote_Order__c.object-meta.xml
<CustomObject>
    <label>Quote Order</label>
    <nameField>
        <displayFormat>QO-{0000}</displayFormat>
        <label>Quote Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>