force-app/main/default/objects/Quote_Order__c/fields/Acorn_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Instructions__c</fullName>
    <description>SDT-20938: It will contain the details of Contact, Phone, and instruction together.</description>
    <label>ACORN Instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>