force-app/main/default/objects/Quote_Order__c/fields/Bypass_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New field for SDT-26355</description>
    <label>Bypass Work Order</label>
    <type>Checkbox</type>
</CustomField>