force-app/main/default/objects/Quote_Order__c/fields/Cust_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Cust_Ref_Number__c</fullName>
    <label>Cust Ref Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>