force-app/main/default/objects/Quote_Order__c/fields/ErrorComments__c.field-meta.xml
<CustomField>
    <fullName>ErrorComments__c</fullName>
    <label>Error Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>