force-app/main/default/objects/Quote_Order__c/fields/IsSynced__c.field-meta.xml
<CustomField>
    <fullName>IsSynced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Synced</label>
    <type>Checkbox</type>
</CustomField>