force-app/main/default/objects/Quote_Order__c/fields/Occurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Type__c</fullName>
    <label>Occurrence Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>