force-app/main/default/objects/Quote_Order__c/fields/Onsite_Contact__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact__c</fullName>
    <description>SDT-20938 Onsite Contact Details</description>
    <label>Onsite Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>