force-app/main/default/objects/Quote_Order__c/fields/Onsite_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Phone__c</fullName>
    <description>SDT-20938 Onsite Contact Phone details</description>
    <label>Onsite Contact Phone</label>
    <type>Phone</type>
</CustomField>