force-app/main/default/objects/Quote_Order__c/fields/Placement_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Placement_Instructions__c</fullName>
    <description>SDT-23093 , to populate Placement Instructions for Delivery Quote Order</description>
    <label>Placement Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>