force-app/main/default/objects/Quote_Order__c/fields/Service_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Quote Orders (Service Quote Line)</relationshipLabel>
    <relationshipName>Quote_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>