force-app/main/default/objects/Quote_Order__c/fields/Service_Time_Span__c.field-meta.xml
<CustomField>
    <fullName>Service_Time_Span__c</fullName>
    <description>SDT-20109 capture service time window on Quote Order</description>
    <label>Service Time Span</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASAP</fullName>
                <default>true</default>
                <label>ASAP</label>
            </value>
            <value>
                <fullName>DAWN</fullName>
            </value>
            <value>
                <fullName>EARLY</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>NOON</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>DUSK</fullName>
            </value>
            <value>
                <fullName>EVENING</fullName>
            </value>
            <value>
                <fullName>LATE</fullName>
            </value>
            <value>
                <fullName>12AM</fullName>
            </value>
            <value>
                <fullName>1AM</fullName>
            </value>
            <value>
                <fullName>2AM</fullName>
            </value>
            <value>
                <fullName>3AM</fullName>
            </value>
            <value>
                <fullName>4AM</fullName>
            </value>
            <value>
                <fullName>5AM</fullName>
            </value>
            <value>
                <fullName>6AM</fullName>
            </value>
            <value>
                <fullName>7AM</fullName>
            </value>
            <value>
                <fullName>8AM</fullName>
            </value>
            <value>
                <fullName>9AM</fullName>
            </value>
            <value>
                <fullName>10AM</fullName>
            </value>
            <value>
                <fullName>11AM</fullName>
            </value>
            <value>
                <fullName>12PM</fullName>
            </value>
            <value>
                <fullName>1PM</fullName>
            </value>
            <value>
                <fullName>2PM</fullName>
            </value>
            <value>
                <fullName>3PM</fullName>
            </value>
            <value>
                <fullName>4PM</fullName>
            </value>
            <value>
                <fullName>5PM</fullName>
            </value>
            <value>
                <fullName>6PM</fullName>
            </value>
            <value>
                <fullName>7PM</fullName>
            </value>
            <value>
                <fullName>8PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>