force-app/main/default/objects/Quote_Order__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Removal</fullName>
            </value>
            <value>
                <fullName>Rental Charge</fullName>
            </value>
            <value>
                <fullName>Lock Delivery</fullName>
            </value>
            <value>
                <fullName>Power Wash</fullName>
            </value>
            <value>
                <fullName>Onsite Relocation</fullName>
            </value>
            <value>
                <fullName>Container Exchange</fullName>
            </value>
            <value>
                <fullName>Contaminated Pickup</fullName>
            </value>
            <value>
                <fullName>Dig Out Service</fullName>
            </value>
            <value>
                <fullName>Dry Run</fullName>
            </value>
            <value>
                <fullName>Product Order</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>