force-app/main/default/objects/Quote_Order__c/fields/Vendor_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Service_Id__c</fullName>
    <description>This field is created as to get service id in intake screeen SDT-41473</description>
    <label>Vendor Service Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>